# PokeDex

./: Cargo.toml  README.md
src/: filter.rs  handle.rs  main.rs  routes.rs  settings.rs
src/config/: settings.toml
